--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "find": "^0.3.0",
     "http-errors": "~1.6.2",
     "jquery": "^3.3.1",
     "js-video-url-parser": "^0.2.8",
